# tldr-scholar

./: .coverage  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SERVICE-INVENTORY.md  manifest  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/plans/: active-plan.md  hardened-analytic-pipeline-v2.md  hardened-analytic-pipeline.md  social-feed-synthesis-v2.md  social-feed-synthesis.md  (+1 more)
tests/: test_aggregator.py  test_backends.py  test_cache_integration.py  test_cli.py  test_cli_flags.py  test_corpus_cache.py  test_corpus_cache_stages.py  test_corpus_sampler.py  test_correlation.py  test_correlator.py  test_decomposition.py  test_doi.py  test_error_contract.py  test_gap_detection.py  test_generation_blend.py  test_hashtags.py  test_ingest.py  test_models.py  test_oa_fetch.py  test_persona_v2.py  test_personas.py  test_preflight.py  test_prompts.py  test_refine_merge.py  test_scrape_filter.py  test_scrapers.py  test_source_baseline.py  test_synth_pipeline.py  test_synthesis.py  test_synthesize_style.py  test_synthesize_style_v2.py  test_topic_cluster.py  test_utility.py
tldr_scholar/: __init__.py  __main__.py  _envelope.py  aggregator.py  cli.py  config.py  corpus_cache.py  corpus_sampler.py  correlator.py  doi.py  error_contract.py  hashtags.py  ingest.py  ingestion_engine.py  models.py  oa_fetch.py  personas.py  preflight.py  prompts.py  refine_persona.py  scrape_filter.py  scrapers.py  source_baseline.py  synthesize_style.py  topic_cluster.py  types.py
tldr_scholar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+11 files in other folders)
